--- a/modules/vagrant_installer/templates/package/arch_pkgbuild.erb
+++ b/modules/vagrant_installer/templates/package/arch_pkgbuild.erb
@@ -37,6 +37,5 @@ check() {
 }
 
 package() {
-  mkdir -p $pkgdir<%= @arch_prefix %>
-  mv <%= @staging_dir %>/* $pkgdir<%= @arch_prefix %>/
+  mv <%= @staging_dir %>/* $pkgdir
 }
