Add gnuwin32 bin to path for Windows

--- a/modules/vagrant_installer/templates/windows_vagrant.bat.erb
+++ b/modules/vagrant_installer/templates/windows_vagrant.bat.erb
@@ -20,7 +20,7 @@ SET "VAGRANT_INSTALLER_ENV=1"
 SET "VAGRANT_INSTALLER_EMBEDDED_DIR=%EMBEDDED_DIR%"
 
 REM Prepend embedded bin to PATH so we prefer those binaries
-SET "PATH=%EMBEDDED_DIR%\bin;%PATH%"
+SET "PATH=%EMBEDDED_DIR%\bin;%EMBEDDED_DIR%\gnuwin32\bin;%PATH%"
 
 REM Remove RUBYOPT, which causes serious problems.
 SET RUBYOPT=
