Wrap Vagrant call in quotes for directories with spaces

--- a/modules/vagrant_installer/templates/vagrant.erb
+++ b/modules/vagrant_installer/templates/vagrant.erb
@@ -75,4 +75,4 @@ VAGRANT_EXECUTABLE=${GEM_PATH}/bin/vagrant
 <% end -%>
 
 # Call the actual Vagrant bin with our arguments
-${EMBEDDED_DIR}/bin/ruby ${VAGRANT_EXECUTABLE} "$@"
+"${EMBEDDED_DIR}/bin/ruby" "${VAGRANT_EXECUTABLE}" "$@"
