--- a/modules/vagrant_installer/templates/vagrant.erb
+++ b/modules/vagrant_installer/templates/vagrant.erb
@@ -48,9 +48,9 @@ OS=$(uname -o 2> /dev/null)
 # Prepend our embedded dir to the PATH so that we call that preferably
 export PATH="${EMBEDDED_DIR}/bin:${PATH}"
 
-if [ "${OS}" = "Cygwin" ]; then
-	# In Cygwin, we want to add the Windows path to the PATH so that
-	# bsdtar and friends can be found
+if [ "${OS}" = "Cygwin" -o "${OS}" = "MINGW32" ]; then
+	# In Linux-like environments on Windows, we want to add the Windows
+	# path to the PATH so that bsdtar and friends can be found.
 	export PATH="${EMBEDDED_DIR}/gnuwin32/bin:${PATH}"
 fi
 
