Install curl on Windows

--- a/modules/curl/templates/extract.erb
+++ b/modules/curl/templates/extract.erb
@@ -1,5 +1,5 @@
 $zipPath = "<%= @source_file_path %>"
-$destination = "<%= @install_dir %>\bin"
+$destination = "<%= @install_dir %>"
 
 $shell = New-Object -ComObject "Shell.Application"
 $zip = $shell.NameSpace($zipPath)
