--- a/modules/vagrant_installer/templates/package/windows_en-us.wxl.erb
+++ b/modules/vagrant_installer/templates/package/windows_en-us.wxl.erb
@@ -2,5 +2,5 @@
 <WixLocalization Culture="en-us" xmlns="http://schemas.microsoft.com/wix/2006/localization">
   <String Id="LANG">1033</String>
   <String Id="ProductName">Vagrant</String>
-  <String Id="ManufacturerName">Vagrant</String>
+  <String Id="ManufacturerName">HashiCorp</String>
 </WixLocalization>
